--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title></title>
+    <title>Supernova Capital</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="Wesley Andrade - github.com/wesandradealves">
@@ -20,19 +20,70 @@
     <link rel="apple-touch-icon" href="">
     <link rel="shortcut icon" type="image/png" href="">
   </head>
-  <body> 
+  <body class="pg-home"> 
     <div id="wrap">
-      <header>
+      <header id="header">
+        <div class="container">
+          <h1>
+            <img
+                 src="./assets/img/logo_white@0.5x.png"
+                 alt="Supernova Capital">
+          </h1>
+          <nav>
+            <ul>
+              <li class="active">
+                <a href="">Início</a>
+              </li>
+              <li>
+                <a href="">Ativos Imobiliários</a>
+              </li>
+              <li>
+                <a href="">política de investimento</a>
+              </li>
+              <li>
+                <a href="">CENTRAL DE DOWNLOADS</a>
+              </li>
+              <li>
+                <a href="">contato</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </header>
-      <main>
+      <main id="main">
+        <section class="banner">
+          <div class="container">
+            <div>
+              <h2>
+                <small>GGRC11</small>
+                GGR<br/>COVEPI<br/>Renda FII
+              </h2>
+              <h3>Fundo de Investimento<br/>Imobiliário</h3>
+            </div>
+          </div>
+        </section>
       </main>
+      <footer id="footer">
+        <div class="container">
+          <div class="file-download">
+            <i class="fas fa-file-download"></i>
+            <a href="#">Relatório de Gestão - Abril/2020 <small>BAIXAR DOCUMENTO</small></a>
+          </div>
+        </div>
+      </footer>
     </div> 
-    <footer>
-    </footer>
+    <!--  -->
+    <div id="bg">
+      <video muted autoplay loop>
+        <source src="./assets/videos/bg.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>      
+    </div>
     <script defer src="assets/js/vendors.js"></script>
     <noscript>Seu Navegador pode não aceitar javascript.</noscript>
     <script defer src="assets/js/commons.js"></script>
     <noscript>Seu Navegador pode não aceitar javascript.</noscript>  
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
   </body>
 </html>
