--- a/index.html
+++ b/index.html
@@ -20,31 +20,40 @@
     <link rel="apple-touch-icon" href="">
     <link rel="shortcut icon" type="image/png" href="">
   </head>
-  <body class="pg-home"> 
+  <body class="pg-home"  data-controller="home"> 
     <div id="wrap">
       <header id="header">
         <div class="container">
           <h1>
-            <img
-                 src="./assets/img/logo_white@0.5x.png"
-                 alt="Supernova Capital">
+            <picture>
+
+            <source media="(min-width: 1281px)" srcset="./assets/img/logo_white@0.5x.png">
+
+            <source media="(max-width: 1280px)" srcset="./assets/img/Logo@0.5x.png">
+
+            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+
+            </picture>
           </h1>
           <nav>
             <ul>
               <li class="active">
-                <a href="">Início</a>
+                <a href="./index.html">Início</a>
               </li>
               <li>
-                <a href="">Ativos Imobiliários</a>
+                <a href="./ativos-imobiliarios.html">Ativos Imobiliários</a>
               </li>
               <li>
-                <a href="">política de investimento</a>
+                <a href="./politica-de-investimentos.html">política de investimento</a>
               </li>
               <li>
                 <a href="">CENTRAL DE DOWNLOADS</a>
               </li>
               <li>
                 <a href="">contato</a>
+              </li>
+              <li>
+                <i class="fas fa-bars"></i>
               </li>
             </ul>
           </nav>
@@ -56,9 +65,9 @@
             <div>
               <h2>
                 <small>GGRC11</small>
-                GGR<br/>COVEPI<br/>Renda FII
+                GGR<br/> COVEPI<br/> Renda FII
               </h2>
-              <h3>Fundo de Investimento<br/>Imobiliário</h3>
+              <h3>Fundo de Investimento<br/> Imobiliário</h3>
             </div>
           </div>
         </section>
