--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="./politica-de-investimentos.html">política de investimento</a>
               </li>
               <li>
-                <a href="">CENTRAL DE DOWNLOADS</a>
+                <a href="./central-de-downloads.html">CENTRAL DE DOWNLOADS</a>
               </li>
               <li>
                 <a href="">contato</a>
