- Páginas restantes; - Newsletter;

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="">
     <link rel="shortcut icon" type="image/png" href="">
   </head>
-  <body class="pg-central-de-downloads pg-interna" data-controller="central_de_downloads">
+  <body class="pg-contato pg-interna" data-controller="contato">
     <div id="wrap">
       <header id="header">
         <div class="container">
@@ -34,13 +34,13 @@
               <li>
                 <a href="./index.html">Início</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="./ativos-imobiliarios.html">Ativos Imobiliários</a>
               </li>
               <li>
                 <a href="./politica-de-investimentos.html">política de investimento</a>
               </li>
-              <li class="active"> 
+              <li>
                 <a href="./central-de-downloads.html">CENTRAL DE DOWNLOADS</a>
               </li>
               <li>
@@ -54,69 +54,64 @@
         </div>
       </header>
       <main id="main">
-        <section class="downloads">
-          <div class="downloads-header">
-            <div class="container">
-              <form action="">
-                <h2 class="section-title">Central de Downloads</h2>
-                <div>
-                  <input id="filtro" type="text" placeholder="Busca por Documentos">
-                  <button class="btn btn-1"><span>Buscar</span> <i class="fas fa-search"></i></button>
-                </div>
-              </form>
-            </div>
-          </div>
-          <div class="downloads-content">
-            <div class="container">
-              <aside class="sidebar">
-                <p><strong>Filtrar por</strong></p>
-                <ul>
-                  <li><a href="">Regulamento do Fundo</a></li>
-                  <li><a href="">Relatório de Gestão</a></li>
-                  <li><a href="">Relatório de Acompanhamento Imobiliário</a></li>
-                  <li><a href="">Comunicado ao Mercado</a></li>
-                  <li><a href="">Distribuição de Rendimentos</a></li>
-                  <li><a href="">Laudo de Avaliação Imobiliária</a></li>
-                  <li><a href="">Fatos Relevante</a></li>
-                  <li><a href="">Assembléia</a></li>
-                  <li><a href="">Oferta Pública</a></li>
-                  <li><a href="">Demonstrações Financeiras</a></li>
-                  <li><a href="">Ato do Administrador</a></li>
-                </ul>
-              </aside>
-              <div class="content">
-                <div class="filtro">
-                  <p><strong>Filtro</strong> <span>Nenhum</span></p>
-                  <p>
-                    <strong>Ordernar por</strong>
-                    <span class="select">
-                      <select name="" id="">
-                        <option value="">Mais recente</option>
-                      </select>                    
-                      <i class="fas fa-angle-down"></i>
-                    </span>
-                  </p>
-                </div>
-                <div class="results">
-                  <ul>
-                    <li>
-                      <h4>
-                        <small>17 de Abril de 2020</small>
-                        Lorem ipsum dolor sit amet.
-                      </h4>
-                      <a class="btn btn-2" href=""><i class="fas fa-cloud-download-alt"></i> <Span>Download</Span></a>
-                    </li>
-                    <li>
-                      <h4>
-                        <small>17 de Abril de 2020</small>
-                        Lorem ipsum dolor sit amet.
-                      </h4>
-                      <a class="btn btn-2" href=""><i class="fas fa-cloud-download-alt"></i> <Span>Download</Span></a>
-                    </li>                    
-                  </ul>
-                </div>
-              </div>              
-            </div>
+        <section class="contato">
+          <div class="container">
+            <form class="form">
+              <h2 class="section-title">Contato</h2>
+              <p>Utilize o formulário abaixo para entrar em contato com nossa equipe</p>
+              <span class="form-group">
+                <label for="">Nome</label>
+                <input type="text" placeholder="Seu nome">
+              </span>
+              <span class="form-group">
+                <label for="">E-mail</label>
+                <input type="text" placeholder="Seu nome">
+              </span>
+              <span class="form-group">
+                <label for="">Telefone</label>
+                <input type="text" placeholder="Seu nome">
+              </span>
+              <span class="form-group">
+                <label for="">Assunto</label>
+                <input type="text" placeholder="Seu nome">
+              </span>
+              <span class="form-group">
+                <label for="">Mensagem</label>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+              </span>
+              <button class="btn btn-3">Enviar</button>
+            </form>
+            <aside class="sidebar">
+              <h2 class="section-title">Gestora</h2>
+              <p>
+               A Supernova Capital é uma gestora de recursos que realiza investimentos estratégicos nos mercados imobiliário, de infraestrutura, na estruturação e colocação de crédito privado, além de atuar também com fundos líquidos.
+                <br/><br/>
+                <strong>Supernova Capital</strong>
+                <br/><br/>
+                Av. Brigadeiro Faria Lima, 3477<br/>
+
+                2º Andar - Torre B<br/>
+
+                Itaim Bibi - São Paulo/SP<br/><br/>
+
+                <a href="tel:+551143696100">(11) 4369-6100</a><br/>
+
+                <a href="mailto:contato@supernovacapital.com.br">contato@supernovacapital.com.br</a><br/>
+
+                <a href="http://www.supernovacapital.com.br">www.supernovacapital.com.br </a>                 
+              </p>
+              <ul class="social">
+                <li>
+                  <a target="_blank" href="https://instagram.com/supernovacapitalbr" class="instagram"><i class="fab fa-instagram-square"></i></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://twitter.com/sncapitalbr" class="twitter"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://www.linkedin.com/company/horusggr/" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                </li>
+              </ul>
+            </aside>
           </div>
         </section>
       </main>
