--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="./central-de-downloads.html">CENTRAL DE DOWNLOADS</a>
               </li>
               <li>
-                <a href="">contato</a>
+                <a href="./contato.html">contato</a>
               </li>
               <li>
                 <i class="fas fa-bars"></i>
