--- a/politica-de-investimentos.html
+++ b/politica-de-investimentos.html
@@ -44,7 +44,7 @@
                 <a href="./central-de-downloads.html">CENTRAL DE DOWNLOADS</a>
               </li>
               <li>
-                <a href="">contato</a>
+                <a href="./contato.html">contato</a>
               </li>
               <li>
                 <i class="fas fa-bars"></i>
@@ -122,8 +122,67 @@
             </div>            
           </div>
         </section>
-    </main>
-  </div>
+      </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-top">
+            <picture>
+              <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            </picture>
+            <nav>
+              <strong>Links Úteis</strong>
+              <ul>
+                <li>
+                  <a href="">Início</a>
+                </li>
+                <li>
+                  <a href="">Ativos Imobiliários</a>
+                </li>
+                <li>
+                  <a href="">Contato</a>
+                </li>
+                <li>
+                  <a href="">Central de Downloads</a>
+                </li>
+                <li>
+                  <a href="">Política de Investimento</a>
+                </li>
+              </ul>
+            </nav>
+            <div>
+              <strong>Newsletter</strong>
+              <a href="javascript:void(0)" onclick="Util._newsletter(this)" class="btn btn-3">Cadastrar</a>
+            </div>
+            <div>
+              
+            </div>
+          </div>
+          <p>
+            A Supernova Capital, seus administradores e funcionários isentam-se de responsabilidade sobre quaisquer danos resultantes direta ou indiretamente da utilização das informações contidas neste site. O conteúdo deste site não deverá ser reproduzido, distribuído ou publicado sob qualquer propósito. A equipe de gestores e executivos da Supernova Capital agradecem o acesso e atenção de seus clientes, parceiros, investidores e/ou outros participantes do mercado, bem como se coloca à disposição para quaisquer esclarecimentos e/ou eventualidades oriundas da presente página de internet, bem como dos Fundos de Investimentos e/ou eventuais outros produtos e serviços geridos e prestados pela Supernova Capital. Para maiores informações, por favor, entrar em contato por +55 (11) 4369-6100 ou contato@supernovacapital.com.br.
+          </p>
+          <p class="copyright">
+            Supernova Capital 2019 Todos os direitos reservados.
+          </p>
+        </div>
+      </footer>
+    </div>
+    <div id="newsletter" class="modal">
+      <div class="modal-inner">
+        <form class="form">
+          <h2 class="section-title">Newsletter</h2>
+          <p>Receba todos os documentos e comunicados em primeira mão no seu e-mail</p>
+          <span class="form-group">
+            <label for="">Nome</label>
+            <input type="text" placeholder="Seu nome">
+          </span>
+          <span class="form-group">
+            <label for="">E-mail</label>
+            <input type="text" placeholder="Seu nome">
+          </span>
+          <button class="btn btn-3">Enviar</button>
+        </form>
+      </div>
+    </div>
   <script defer src="assets/js/vendors.js"></script>
   <noscript>Seu Navegador pode não aceitar javascript.</noscript>
   <script defer src="assets/js/commons.js"></script>
