--- a/contato.html
+++ b/contato.html
@@ -79,7 +79,9 @@
                 <label for="">Mensagem</label>
                 <textarea placeholder="Sua mensagem" name="" id="" cols="30" rows="10"></textarea>
               </span>
-              <button class="btn btn-3">Enviar</button>
+              <div class="form-group">
+                <button class="btn btn-3">Enviar</button>
+              </div>
             </form>
             <aside class="sidebar">
               <h2 class="section-title">Gestora</h2>
