--- a/contato.html
+++ b/contato.html
@@ -26,7 +26,7 @@
         <div class="container">
           <h1>
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/Logo@0.5x.png" alt="Supernova Capital">
           </picture>
           </h1>
           <nav>
@@ -34,7 +34,7 @@
               <li>
                 <a href="./index.html">Início</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="./ativos-imobiliarios.html">Ativos Imobiliários</a>
               </li>
               <li>
@@ -43,7 +43,7 @@
               <li>
                 <a href="./central-de-downloads.html">CENTRAL DE DOWNLOADS</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="./contato.html">contato</a>
               </li>
               <li>
@@ -86,7 +86,8 @@
             <aside class="sidebar">
               <h2 class="section-title">Gestora</h2>
               <p>
-               A Supernova Capital é uma gestora de recursos que realiza investimentos estratégicos nos mercados imobiliário, de infraestrutura, na estruturação e colocação de crédito privado, além de atuar também com fundos líquidos.
+               A Supernova Capital, seus administradores e funcionários isentam-se de responsabilidade sobre quaisquer danos resultantes direta ou indiretamente da utilização das informações contidas neste site. O conteúdo deste site não deverá ser reproduzido, distribuído ou publicado sob qualquer propósito. A equipe de gestores e executivos da Supernova Capital agradecem o acesso e atenção de seus clientes, parceiros, investidores e/ou outros participantes do mercado, bem como se coloca à disposição para quaisquer esclarecimentos e/ou eventualidades oriundas da presente página de internet, bem como dos Fundos de Investimentos e/ou eventuais outros produtos e serviços geridos e prestados pela Supernova Capital. Para maiores informações, por favor, entrar em contato por +55 (11) 4369-6100 ou contato@supernovacapital.com.br.
+
                 <br/><br/>
                 <strong>Supernova Capital</strong>
                 <br/><br/>
@@ -122,7 +123,10 @@
       <div class="container">
         <div class="footer-top">
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/logo_white@0.5x.png" alt="Supernova Capital">
+            <p>
+              A  Supernova Capital é uma gestora de recursos que realiza investimentos estratégicos nos mercados imobiliário, de infraestrutura, na estruturação e colocação de crédito privado, além de atuar também com fundos líquidos.
+            </p>
           </picture>
           <nav>
             <strong>Links Úteis</strong>
@@ -157,6 +161,7 @@
         </div>
         <p>
           A Supernova Capital, seus administradores e funcionários isentam-se de responsabilidade sobre quaisquer danos resultantes direta ou indiretamente da utilização das informações contidas neste site. O conteúdo deste site não deverá ser reproduzido, distribuído ou publicado sob qualquer propósito. A equipe de gestores e executivos da Supernova Capital agradecem o acesso e atenção de seus clientes, parceiros, investidores e/ou outros participantes do mercado, bem como se coloca à disposição para quaisquer esclarecimentos e/ou eventualidades oriundas da presente página de internet, bem como dos Fundos de Investimentos e/ou eventuais outros produtos e serviços geridos e prestados pela Supernova Capital. Para maiores informações, por favor, entrar em contato por +55 (11) 4369-6100 ou contato@supernovacapital.com.br.
+
         </p>
         <p class="copyright">
           Supernova Capital 2019 Todos os direitos reservados.
