--- a/politica-de-investimentos.html
+++ b/politica-de-investimentos.html
@@ -26,7 +26,7 @@
         <div class="container">
           <h1>
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/Logo@0.5x.png" alt="Supernova Capital">
           </picture>
           </h1>
           <nav>
@@ -55,8 +55,9 @@
       </header>
       <main id="main">
         <section class="politica-de-investimentos">
+          <!--  -->
           <div class="container content">
-            <div>
+            <div class="active">
               <h2 class="section-title">Política de Investimento</h2>
               <p>
                 O objetivo do fundo é a realização de investimentos em imóveis, exclusivamente comerciais, destinados à locação atípica (built to suit, retrofit ou sale & leaseback), prioritariamente nos segmentos industrial e logístico.
@@ -128,7 +129,7 @@
       <div class="container">
         <div class="footer-top">
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/logo_white@0.5x.png" alt="Supernova Capital">
           </picture>
           <nav>
             <strong>Links Úteis</strong>
@@ -163,6 +164,7 @@
         </div>
         <p>
           A Supernova Capital, seus administradores e funcionários isentam-se de responsabilidade sobre quaisquer danos resultantes direta ou indiretamente da utilização das informações contidas neste site. O conteúdo deste site não deverá ser reproduzido, distribuído ou publicado sob qualquer propósito. A equipe de gestores e executivos da Supernova Capital agradecem o acesso e atenção de seus clientes, parceiros, investidores e/ou outros participantes do mercado, bem como se coloca à disposição para quaisquer esclarecimentos e/ou eventualidades oriundas da presente página de internet, bem como dos Fundos de Investimentos e/ou eventuais outros produtos e serviços geridos e prestados pela Supernova Capital. Para maiores informações, por favor, entrar em contato por +55 (11) 4369-6100 ou contato@supernovacapital.com.br.
+
         </p>
         <p class="copyright">
           Supernova Capital 2019 Todos os direitos reservados.
