--- a/ativos-imobiliarios.html
+++ b/ativos-imobiliarios.html
@@ -26,7 +26,7 @@
         <div class="container">
           <h1>
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/Logo@0.5x.png" alt="Supernova Capital">
           </picture>
           </h1>
           <nav>
@@ -295,6 +295,7 @@
                   </li>
                 </ul>
                 <p class="data-reajuste">Reajuste Anual pelo IPCA</p>
+                <a class="close-modal" href="javascript:void(0)" onclick="Util._closeModal(this)"><i class="fas fa-reply"></i> Ver Todos</a>
               </div>
             </div>
           </div>
@@ -305,7 +306,7 @@
       <div class="container">
         <div class="footer-top">
           <picture>
-            <img src="./assets/img/Logo@0.5x.png" alt="Space Needle">
+            <img src="./assets/img/logo_white@0.5x.png" alt="Supernova Capital">
           </picture>
           <nav>
             <strong>Links Úteis</strong>
@@ -340,6 +341,7 @@
         </div>
         <p>
           A Supernova Capital, seus administradores e funcionários isentam-se de responsabilidade sobre quaisquer danos resultantes direta ou indiretamente da utilização das informações contidas neste site. O conteúdo deste site não deverá ser reproduzido, distribuído ou publicado sob qualquer propósito. A equipe de gestores e executivos da Supernova Capital agradecem o acesso e atenção de seus clientes, parceiros, investidores e/ou outros participantes do mercado, bem como se coloca à disposição para quaisquer esclarecimentos e/ou eventualidades oriundas da presente página de internet, bem como dos Fundos de Investimentos e/ou eventuais outros produtos e serviços geridos e prestados pela Supernova Capital. Para maiores informações, por favor, entrar em contato por +55 (11) 4369-6100 ou contato@supernovacapital.com.br.
+
         </p>
         <p class="copyright">
           Supernova Capital 2019 Todos os direitos reservados.
