--- a/central-de-downloads.html
+++ b/central-de-downloads.html
@@ -126,6 +126,9 @@
         <div class="footer-top">
           <picture>
             <img src="./assets/img/logo_white@0.5x.png" alt="Supernova Capital">
+            <p>
+              A  Supernova Capital é uma gestora de recursos que realiza investimentos estratégicos nos mercados imobiliário, de infraestrutura, na estruturação e colocação de crédito privado, além de atuar também com fundos líquidos.
+            </p>
           </picture>
           <nav>
             <strong>Links Úteis</strong>
