--- a/ativos-imobiliarios.html
+++ b/ativos-imobiliarios.html
@@ -307,6 +307,9 @@
         <div class="footer-top">
           <picture>
             <img src="./assets/img/logo_white@0.5x.png" alt="Supernova Capital">
+            <p>
+              A  Supernova Capital é uma gestora de recursos que realiza investimentos estratégicos nos mercados imobiliário, de infraestrutura, na estruturação e colocação de crédito privado, além de atuar também com fundos líquidos.
+            </p>
           </picture>
           <nav>
             <strong>Links Úteis</strong>
@@ -347,7 +350,7 @@
           Supernova Capital 2019 Todos os direitos reservados.
         </p>
       </div>
-    </footer>      
+    </footer>     
     <div id="newsletter" class="modal">
       <div class="modal-inner">
         <form class="form">
